[project]
name = "remedia"
version = "0.1.0"
description = "Duplicate detection for media files (images, videos, more)"
authors = [
  { name = "Christian Seip", email = "christian@seip.io" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pillow",
  "imagehash",
  "tqdm"
]

[project.scripts]
remedia = "main:run_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
